[WIP] removed pretty, but unuseful bootstrap features when creating a new mapping, form for passthrough mappings added, disabling button if a mapping already exists, because user can make a lot of bad things if i allow that

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -73,8 +73,8 @@
   "SIDEBAR_EDIT_INSPECT_TITLE": "Netzwerk untersuchen",
   "SIDEBAR_EDIT_ATTRIBUTES_TITLE": "Mappings",
   "SIDEBAR_EDIT_TH_CLASSNAME": "Klassenname",
-  "SIDEBAR_EDIT_TH_CSS_KEY": "CSS-Key",
-  "SIDEBAR_EDIT_TH_CSS_VALUE": "CSS-Value",
+  "SIDEBAR_EDIT_TH_CSS_KEY": "Style-Name",
+  "SIDEBAR_EDIT_TH_CSS_VALUE": "Style-Wert",
   "SIDEBAR_EDIT_TH_HIGHLIGHT": "Elemente",
   "SIDEBAR_EDIT_TT_SELECTOR": "Markiere Elemente mit Klasse",
   "SIDEBAR_EDIT_TT_ID": "Markiere Elemente mit ID",
@@ -135,16 +135,20 @@
   "MAIN_MAPPINGS_EDIT_ED": "Mapping bearbeiten: Kanten diskret",
   "MAIN_MAPPINGS_NEW_EC": "Neues Mapping: Kanten kontinuierlich",
   "MAIN_MAPPINGS_EDIT_EC": "Mapping bearbeiten: Kanten kontinuierlich",
+  "MAIN_MAPPINGS_NEW_EP": "Neues Mapping: Kanten passthrough",
+  "MAIN_MAPPINGS_NEW_NP": "Neues Mapping: Knoten passthrough",
   "MAIN_MAPPINGS_NEW_TYPE_ND": "Knoten - diskret",
   "MAIN_MAPPINGS_NEW_TYPE_NC": "Knoten - kontinuierlich",
+  "MAIN_MAPPINGS_NEW_TYPE_NP": "Knoten - passthrough",
   "MAIN_MAPPINGS_NEW_TYPE_ED": "Kanten - diskret",
   "MAIN_MAPPINGS_NEW_TYPE_EC": "Kanten - kontinuierlich",
+  "MAIN_MAPPINGS_NEW_TYPE_EP": "Kanten - passthrough",
   "MAIN_MAPPINGS_NEW_PLACEHOLDER": "Neuer Wert",
-  "MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL": "Zu setzende CSS-Eigenschaft",
-  "MAIN_MAPPINGS_NEW_INSTRUCTIONS": "Hier kann ein neues Mapping angelegt werden. Die gewählte Eigenschaft hat die in nachfolgendem Formular aufgeführten Ausprägungen. Jede dieser Ausprägungen kann mit einem Wert versehen werden, den die ausgewählte CSS-Eigenschaft einnehmen soll. Die CSS-Eigenschaft wird durch Eingabe ins Textfeld festgelegt. Ob eine solche CSS-Eigenschaft existiert, wird nicht validiert.",
+  "MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL": "Zu setzende Style-Eigenschaft",
+  "MAIN_MAPPINGS_NEW_INSTRUCTIONS": "Hier kann ein neues Mapping angelegt werden. Die gewählte Eigenschaft hat die in nachfolgendem Formular aufgeführten Ausprägungen. Jede dieser Ausprägungen kann mit einem Wert versehen werden, den die ausgewählte Style-Eigenschaft einnehmen soll. Die Style-Eigenschaft wird durch Eingabe ins Textfeld festgelegt. Ob eine solche Style-Eigenschaft existiert, wird nicht validiert.",
   "MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE": "Ausgewähltes Attribut",
   "MAIN_MAPPINGS_NEW_TT_DISTRIBUTION": "Verteilung der Ausprägungen für dieses Attribut",
-  "MAIN_MAPPINGS_NEW_CSS_HINT": "Gib den Namen einer CSS Eigenschaft ein, die entsprechend der Attributausprägungen verändert werden soll",
+  "MAIN_MAPPINGS_NEW_CSS_HINT": "Gib den Namen einer Style Eigenschaft ein, die entsprechend der Attributausprägungen verändert werden soll",
   "MAIN_MAPPINGS_NEW_COLOR_PREVIEW": "Vorschau für die gesetzten Farbwerte",
   "MAIN_MAPPINGS_NEW_SUBMIT": "Neues Mapping speichern",
   "MAIN_MAPPINGS_NEW_ABORT": "Abbrechen und zurück zum Graph",
@@ -152,7 +156,7 @@
   "MAIN_MAPPINGS_NEW_CB_COLORS": "Als Farbeigenschaft behandeln",
   "MAIN_MAPPINGS_NEW_DEFAULT_LOW": "Standardwert für alle niedrigeren Werte",
   "MAIN_MAPPINGS_NEW_DEFAULT_GREAT": "Standardwert für alle höheren Werte",
-  "MAIN_MAPPINGS_NEW_ALREADY_EXISTS": "Ein Mapping für dieses Attribut und diese CSS-Eigenschaft existiert bereits",
+  "MAIN_MAPPINGS_NEW_ALREADY_EXISTS": "Ein Mapping für dieses Attribut und diese Style-Eigenschaft existiert bereits",
   "MAIN_MAPPINGS_NEW_EDIT_INSTEAD": "Ein zweites Mapping anzulegen ist in der Regel nicht sinnvoll. Möchtest du dieses Mapping stattdessen bearbeiten?",
   "MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD": "Existierendes Mapping bearbeiten",
   "MAIN_MAPPINGS_NEW_TT_HINTS_SHOW": "Hinweise anzeigen",
