--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -73,8 +73,8 @@
   "SIDEBAR_EDIT_INSPECT_TITLE": "Inspect network",
   "SIDEBAR_EDIT_ATTRIBUTES_TITLE": "Mappings",
   "SIDEBAR_EDIT_TH_CLASSNAME": "Class name",
-  "SIDEBAR_EDIT_TH_CSS_KEY": "CSS key",
-  "SIDEBAR_EDIT_TH_CSS_VALUE": "CSS value",
+  "SIDEBAR_EDIT_TH_CSS_KEY": "Style key",
+  "SIDEBAR_EDIT_TH_CSS_VALUE": "Style value",
   "SIDEBAR_EDIT_TH_HIGHLIGHT": "Elements",
   "SIDEBAR_EDIT_TT_SELECTOR": "Highlight elements with class",
   "SIDEBAR_EDIT_TT_ID": "Highlight element with ID",
@@ -127,24 +127,28 @@
   "MAIN_MAPPINGS_CONFIRM_DELETION_YES": "I'm pretty sure, delete this",
   "MAIN_MAPPINGS_CONFIRM_DELETION_NO": "Never mind",
   "MAIN_MAPPINGS_TT_MAP_DETAILS": "Show details in table above",
-  "MAIN_MAPPINGS_NEW_ND": "New Mapping: Nodes discrete",
-  "MAIN_MAPPINGS_EDIT_ND": "Edit Mapping: Nodes discrete",
-  "MAIN_MAPPINGS_NEW_NC": "New Mapping: Nodes continuous",
-  "MAIN_MAPPINGS_EDIT_NC": "Edit Mapping: Nodes continuous",
-  "MAIN_MAPPINGS_NEW_ED": "New Mapping: Edges discrete",
-  "MAIN_MAPPINGS_EDIT_ED": "Edit Mapping: Edges discrete",
-  "MAIN_MAPPINGS_NEW_EC": "New Mapping: Edges continuous",
-  "MAIN_MAPPINGS_EDIT_EC": "Edit Mapping: Edges continuous",
+  "MAIN_MAPPINGS_NEW_ND": "New mapping: Nodes discrete",
+  "MAIN_MAPPINGS_EDIT_ND": "Edit mapping: Nodes discrete",
+  "MAIN_MAPPINGS_NEW_NC": "New mapping: Nodes continuous",
+  "MAIN_MAPPINGS_EDIT_NC": "Edit mapping: Nodes continuous",
+  "MAIN_MAPPINGS_NEW_ED": "New mapping: Edges discrete",
+  "MAIN_MAPPINGS_EDIT_ED": "Edit mapping: Edges discrete",
+  "MAIN_MAPPINGS_NEW_EC": "New mapping: Edges continuous",
+  "MAIN_MAPPINGS_EDIT_EC": "Edit mapping: Edges continuous",
+  "MAIN_MAPPINGS_NEW_EP": "New mapping: Edges passthrough",
+  "MAIN_MAPPINGS_NEW_NP": "New mapping: Nodes passthrough",
   "MAIN_MAPPINGS_NEW_TYPE_ND": "Nodes - discrete",
   "MAIN_MAPPINGS_NEW_TYPE_NC": "Nodes - continuous",
+  "MAIN_MAPPINGS_NEW_TYPE_NP": "Nodes - passthrough",
   "MAIN_MAPPINGS_NEW_TYPE_ED": "Edges - discrete",
   "MAIN_MAPPINGS_NEW_TYPE_EC": "Edges - continuous",
+  "MAIN_MAPPINGS_NEW_TYPE_EP": "Edges - passthrough",
   "MAIN_MAPPINGS_NEW_PLACEHOLDER": "New value",
-  "MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL": "CSS property",
-  "MAIN_MAPPINGS_NEW_INSTRUCTIONS": "Create a new mapping here. The selected attribute's values are listed in the form below. Each of these values can be mapped to a specific CSS value. Enter the CSS property's key into the specified field to map it by your selected attribute. Validation if such a CSS property exists is not provided.",
+  "MAIN_MAPPINGS_NEW_CSS_PROPERTY_LABEL": "Style property",
+  "MAIN_MAPPINGS_NEW_INSTRUCTIONS": "Create a new mapping here. The selected attribute's values are listed in the form below. Each of these values can be mapped to a specific style value. Enter the style property's key into the specified field to map it by your selected attribute. Validation if such a style property exists is not provided.",
   "MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE": "Selected attribute",
   "MAIN_MAPPINGS_NEW_TT_DISTRIBUTION": "View distribution details for this property",
-  "MAIN_MAPPINGS_NEW_CSS_HINT": "Enter the name of a CSS property you wish to map",
+  "MAIN_MAPPINGS_NEW_CSS_HINT": "Enter the name of a style property you wish to map",
   "MAIN_MAPPINGS_NEW_COLOR_PREVIEW": "Validate your colors by toggeling previews",
   "MAIN_MAPPINGS_NEW_SUBMIT": "Submit new mapping",
   "MAIN_MAPPINGS_NEW_ABORT": "Abort and return to graph",
@@ -152,7 +156,7 @@
   "MAIN_MAPPINGS_NEW_CB_COLORS": "Evaluate as color property",
   "MAIN_MAPPINGS_NEW_DEFAULT_LOW": "Default for all lower values",
   "MAIN_MAPPINGS_NEW_DEFAULT_GREAT": "Default for all greater values",
-  "MAIN_MAPPINGS_NEW_ALREADY_EXISTS": "A mapping for this attribute-css-combination already exists",
+  "MAIN_MAPPINGS_NEW_ALREADY_EXISTS": "A mapping for this attribute-style-combination already exists",
   "MAIN_MAPPINGS_NEW_EDIT_INSTEAD": "Creating a second one is usually a bad idea. Do you want to edit the existing one?",
   "MAIN_MAPPINGS_NEW_TT_EDIT_INSTEAD": "Edit existing mapping",
   "MAIN_MAPPINGS_NEW_TT_HINTS_SHOW": "Show hints",
