[WIP] table and form for inspect tool, no highlighting happening yet. But it looks nice i think

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -103,6 +103,14 @@
   "SIDEBAR_EDIT_TT_MANAGE_MAPPINGS": "Manage existing mappings and create new ones",
   "SIDEBAR_EDIT_MANAGE_MAPPINGS": "Create and manage mappings",
   "SIDEBAR_EDIT_TT_PASSTHROUGH": "A passthrough mapping simply applies values from the data column (left) on the style property (right)",
+  "SIDEBAR_EDIT_INSPECT_TITLE_HINT": "Build inspections using the form below. Submit them to flash the matching elements during your session.",
+  "SIDEBAR_EDIT_INSPECT_TYPE_NODE": "Node",
+  "SIDEBAR_EDIT_INSPECT_TYPE_EDGE": "Edge",
+  "SIDEBAR_EDIT_INSPECT_SAME": "same as",
+  "SIDEBAR_EDIT_INSPECT_RANGE_LOWER": "from",
+  "SIDEBAR_EDIT_INSPECT_RANGE_UPPER": "to",
+  "SIDEBAR_EDIT_INSPECT_SAME_LABEL": "same as",
+
   "MAIN_MAPPINGS_TH_COL": "Data column",
   "MAIN_MAPPINGS_TH_STYLE": "Applied style",
   "MAIN_MAPPINGS_GRAPH": "Return to graph",
