[WIP] inspection tool works, except for the small matter of special properties, e.g. bait_boolean which need to be inspected further. pun intended.

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -103,6 +103,13 @@
   "SIDEBAR_EDIT_TT_MANAGE_MAPPINGS": "Neue Mappings anlegen und existierende Mappings verwalten",
   "SIDEBAR_EDIT_MANAGE_MAPPINGS": "Mappings anlegen und verwalten",
   "SIDEBAR_EDIT_TT_PASSTHROUGH": "Ein Passthrough-Mapping schleust die Werte der Spalte (links) einfach durch bis zum spezifizierten Style-Attribut (rechts)",
+  "SIDEBAR_EDIT_INSPECT_TITLE_HINT": "Erstelle eigene Regeln, um das Netzwerk zu untersuchen. Definiere dazu Typ, Attribut und dessen Ausprägungen im Formular unten. Dann kannst du Elemente im Netzwerk entsprechend hervorheben.",
+  "SIDEBAR_EDIT_INSPECT_TYPE_NODE": "Knoten",
+  "SIDEBAR_EDIT_INSPECT_TYPE_EDGE": "Kante",
+  "SIDEBAR_EDIT_INSPECT_SAME": "hat den Wert",
+  "SIDEBAR_EDIT_INSPECT_RANGE_LOWER": "von",
+  "SIDEBAR_EDIT_INSPECT_RANGE_UPPER": "bis",
+  "SIDEBAR_EDIT_INSPECT_SAME_LABEL": "mit Wert",
   "MAIN_MAPPINGS_TH_COL": "Spalte mit Daten",
   "MAIN_MAPPINGS_TH_STYLE": "Zugewiesener Style",
   "MAIN_MAPPINGS_GRAPH": "Zurück zum Graph",
