--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -110,6 +110,7 @@
   "SIDEBAR_EDIT_INSPECT_RANGE_LOWER": "von",
   "SIDEBAR_EDIT_INSPECT_RANGE_UPPER": "bis",
   "SIDEBAR_EDIT_INSPECT_SAME_LABEL": "mit Wert",
+  "SIDEBAR_EDIT_INSPECT_REMOVE_ITEM": "Element entfernen?",
   "MAIN_MAPPINGS_TH_COL": "Spalte mit Daten",
   "MAIN_MAPPINGS_TH_STYLE": "Zugewiesener Style",
   "MAIN_MAPPINGS_GRAPH": "Zurück zum Graph",
