--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -110,6 +110,7 @@
   "SIDEBAR_EDIT_INSPECT_RANGE_LOWER": "from",
   "SIDEBAR_EDIT_INSPECT_RANGE_UPPER": "to",
   "SIDEBAR_EDIT_INSPECT_SAME_LABEL": "same as",
+  "SIDEBAR_EDIT_INSPECT_REMOVE_ITEM": "Remove element?",
   "MAIN_MAPPINGS_TH_COL": "Data column",
   "MAIN_MAPPINGS_TH_STYLE": "Applied style",
   "MAIN_MAPPINGS_GRAPH": "Return to graph",
