--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -158,6 +158,7 @@
   "MAIN_MAPPINGS_NEW_TT_DISTRIBUTION": "Verteilung der Ausprägungen für dieses Attribut",
   "MAIN_MAPPINGS_NEW_CSS_HINT": "Gib den Namen einer Style Eigenschaft ein, die entsprechend der Attributausprägungen verändert werden soll",
   "MAIN_MAPPINGS_NEW_COLOR_PREVIEW": "Vorschau für die gesetzten Farbwerte",
+  "MAIN_MAPPINGS_NEW_COLOR_SELECTION": "Du kannst eine Ausprägung für dieses Farbmapping explizit ausschließen, indem Du auf die Checkbox der Zeile klickst",
   "MAIN_MAPPINGS_NEW_SUBMIT": "Neues Mapping speichern",
   "MAIN_MAPPINGS_NEW_ABORT": "Abbrechen und zurück zum Graph",
   "MAIN_MAPPINGS_NEW_CLEAR": "Alle Felder zurücksetzen",
