[DONE] export network as png or jpeg, no svg function natively possible. Also removed cosmetic navbar within sidebar, because it was misleading

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -71,6 +71,7 @@
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES": "#Nodes",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES": "#Edges",
   "SIDEBAR_EDIT_DESCRIPTION_TITLE": "Description",
+  "SIDEBAR_EDIT_DEFAULT_TITLE": "Edit",
   "SIDEBAR_EDIT_INSPECT_TITLE": "Inspect network",
   "SIDEBAR_EDIT_ATTRIBUTES_TITLE": "Mappings",
   "SIDEBAR_EDIT_TH_CLASSNAME": "Class name",
@@ -185,6 +186,18 @@
   "SIDEBAR_COMPARE_ABOUT_3_2": "for feature requests and inquiries",
   "SIDEBAR_COMPARE_TEASER": "Comparison tool coming soon!",
   "SIDEBAR_IMAGE_TITLE": "Save as image",
+  "SIDEBAR_IMAGE_FULL": "Save complete network",
+  "SIDEBAR_IMAGE_FULL_HINT": "Otherwise only the current viewport is exported",
+  "SIDEBAR_IMAGE_BG": "White background",
+  "SIDEBAR_IMAGE_BG_HINT": "Otherwise the background will be transparent",
+  "SIDEBAR_IMAGE_WIDTH": "Width",
+  "SIDEBAR_IMAGE_HEIGHT": "Height",
+  "SIDEBAR_IMAGE_SCALE": "Scale image",
+  "SIDEBAR_IMAGE_SCALE_HINT": "You can increase the image by up to 10%",
+  "SIDEBAR_IMAGE_SELECT_TYPE": "Select filetype",
+  "SIDEBAR_IMAGE_DOWNLOAD_PNG": "Download as PNG",
+  "SIDEBAR_IMAGE_DOWNLOAD_JPEG": "Download as JPEG",
+  "SIDEBAR_IMAGE_GENERAL": "You can select either PNG or JPEG as type of your image. Furthermore can define several non-mandatory settings.",
   "CHART_HISTO_INCREASE": "Add bin",
   "CHART_HISTO_DECREASE": "Remove bin",
   "CHART_HISTO_RESET": "Reset bins to "
