--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -71,6 +71,7 @@
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES": "#Knoten",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES": "#Kanten",
   "SIDEBAR_EDIT_DESCRIPTION_TITLE": "Beschreibung",
+  "SIDEBAR_EDIT_DEFAULT_TITLE": "Bearbeiten",
   "SIDEBAR_EDIT_INSPECT_TITLE": "Netzwerk untersuchen",
   "SIDEBAR_EDIT_ATTRIBUTES_TITLE": "Mappings",
   "SIDEBAR_EDIT_TH_CLASSNAME": "Klassenname",
@@ -185,6 +186,18 @@
   "SIDEBAR_COMPARE_ABOUT_3_2": "gut aufgehoben",
   "SIDEBAR_COMPARE_TEASER": "Vergleich zweier Netzwerke kommt demnächst!",
   "SIDEBAR_IMAGE_TITLE": "Als Bild speichern",
+  "SIDEBAR_IMAGE_FULL": "Gesamtes Netzwerk exportieren",
+  "SIDEBAR_IMAGE_FULL_HINT": "Andernfalls ist lediglich der sichtbare Ausschnitt des Netzwerks im Bild",
+  "SIDEBAR_IMAGE_BG": "Weißer Hintergrund",
+  "SIDEBAR_IMAGE_BG_HINT": "Andernfalls ist der Hintergrund transparent",
+  "SIDEBAR_IMAGE_WIDTH": "Bildbreite",
+  "SIDEBAR_IMAGE_HEIGHT": "Bildhöhe",
+  "SIDEBAR_IMAGE_SCALE": "Bild skalieren",
+  "SIDEBAR_IMAGE_SCALE_HINT": "Das Bild kann um bis zu 10% vergrößert werden",
+  "SIDEBAR_IMAGE_SELECT_TYPE": "Dateityp wählen",
+  "SIDEBAR_IMAGE_DOWNLOAD_PNG": "Als PNG herunterladen",
+  "SIDEBAR_IMAGE_DOWNLOAD_JPEG": "Als JPEG herunterladen",
+  "SIDEBAR_IMAGE_GENERAL": "Als Datentyp kannst du PNG oder JPEG wählen. Die weiteren Einstellungen sind optional.",
   "CHART_HISTO_INCREASE": "Bin hinzufügen",
   "CHART_HISTO_DECREASE": "Bin entfernen",
   "CHART_HISTO_RESET": "Bins zurücksetzen auf "
