[DONE] description and selected elements are collapsible

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -195,8 +195,7 @@
   "SIDEBAR_IMAGE_SCALE": "Bild skalieren",
   "SIDEBAR_IMAGE_SCALE_HINT": "Das Bild kann um bis zu 10% vergrößert werden",
   "SIDEBAR_IMAGE_SELECT_TYPE": "Dateityp wählen",
-  "SIDEBAR_IMAGE_DOWNLOAD_PNG": "Als PNG herunterladen",
-  "SIDEBAR_IMAGE_DOWNLOAD_JPEG": "Als JPEG herunterladen",
+  "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Bild herunterladen",
   "SIDEBAR_IMAGE_GENERAL": "Als Datentyp kannst du PNG oder JPEG wählen. Die weiteren Einstellungen sind optional.",
   "CHART_HISTO_INCREASE": "Bin hinzufügen",
   "CHART_HISTO_DECREASE": "Bin entfernen",
