--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -195,8 +195,7 @@
   "SIDEBAR_IMAGE_SCALE": "Scale image",
   "SIDEBAR_IMAGE_SCALE_HINT": "You can increase the image by up to 10%",
   "SIDEBAR_IMAGE_SELECT_TYPE": "Select filetype",
-  "SIDEBAR_IMAGE_DOWNLOAD_PNG": "Download as PNG",
-  "SIDEBAR_IMAGE_DOWNLOAD_JPEG": "Download as JPEG",
+  "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Download image",
   "SIDEBAR_IMAGE_GENERAL": "You can select either PNG or JPEG as type of your image. Furthermore can define several non-mandatory settings.",
   "CHART_HISTO_INCREASE": "Add bin",
   "CHART_HISTO_DECREASE": "Remove bin",
