[WIP] label font face form

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -174,6 +174,7 @@
   "MAIN_MAPPINGS_NEW_TT_INSPECT_INSTEAD": "Zu den Mapping-Details",
   "MAIN_MAPPINGS_NEW_TT_HINTS_SHOW": "Hinweise anzeigen",
   "MAIN_MAPPINGS_NEW_TT_HINTS_HIDE": "Hinweise verstecken",
+  "MAIN_MAPPINGS_NEW_TT_FONT_SIZE": "Schriftgröße zurücksetzen",
   "MAIN_MAPPINGS_NEW_DEFAULT_HINT_HEADING": "Kontinuierliche Mappings sind knifflig!",
   "MAIN_MAPPINGS_NEW_DEFAULT_HINT_1": "Lass dich von Standardwerten nicht verwirren. Die sind für das NDEx-Datenmodell nötig, beeinflussen dein Mapping aber nicht direkt.",
   "MAIN_MAPPINGS_NEW_DEFAULT_HINT_2": "Minimum und Maximum deines Attributs sollten in einem kontinuierlichen Mapping immer enthalten sein. Deshalb haben wir die schon ins Formular mit aufgenommen.",
@@ -188,12 +189,13 @@
   "SIDEBAR_IMAGE_TITLE": "Als Bild speichern",
   "SIDEBAR_IMAGE_FULL": "Gesamtes Netzwerk exportieren",
   "SIDEBAR_IMAGE_FULL_HINT": "Andernfalls ist lediglich der sichtbare Ausschnitt des Netzwerks im Bild",
-  "SIDEBAR_IMAGE_BG": "Weißer Hintergrund",
-  "SIDEBAR_IMAGE_BG_HINT": "Andernfalls ist der Hintergrund transparent",
+  "SIDEBAR_IMAGE_BG": "Hintergrundfarbe ändern",
+  "SIDEBAR_IMAGE_BG_HINT": "Der Hintergrund wird weiß",
+  "SIDEBAR_IMAGE_BG_PNG_HINT": "Der Hintergrund wird transparent",
   "SIDEBAR_IMAGE_WIDTH": "Bildbreite",
   "SIDEBAR_IMAGE_HEIGHT": "Bildhöhe",
   "SIDEBAR_IMAGE_SCALE": "Bild skalieren",
-  "SIDEBAR_IMAGE_SCALE_HINT": "Das Bild kann um bis zu 10% vergrößert werden",
+  "SIDEBAR_IMAGE_SCALE_HINT": "Das Bild kann bis zu verzehnfacht werden",
   "SIDEBAR_IMAGE_SELECT_TYPE": "Dateityp wählen",
   "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Bild herunterladen",
   "SIDEBAR_IMAGE_GENERAL": "Als Datentyp kannst du PNG oder JPEG wählen. Die weiteren Einstellungen sind optional.",
