--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -174,6 +174,7 @@
   "MAIN_MAPPINGS_NEW_TT_INSPECT_INSTEAD": "Visit mapping details",
   "MAIN_MAPPINGS_NEW_TT_HINTS_SHOW": "Show hints",
   "MAIN_MAPPINGS_NEW_TT_HINTS_HIDE": "Hide hints",
+  "MAIN_MAPPINGS_NEW_TT_FONT_SIZE": "Reset font size",
   "MAIN_MAPPINGS_NEW_DEFAULT_HINT_HEADING": "Continuous mappings are tricky!",
   "MAIN_MAPPINGS_NEW_DEFAULT_HINT_1": "Dont't let default values confuse you. They are needed for the NDEx data model, but they don't impact your mapping directly.",
   "MAIN_MAPPINGS_NEW_DEFAULT_HINT_2": "To define a consistent mapping it's recommended to set values for your attribute's minimum and maximum. You can find them as grey fields in the form below.",
@@ -188,12 +189,13 @@
   "SIDEBAR_IMAGE_TITLE": "Save as image",
   "SIDEBAR_IMAGE_FULL": "Save complete network",
   "SIDEBAR_IMAGE_FULL_HINT": "Otherwise only the current viewport is exported",
-  "SIDEBAR_IMAGE_BG": "White background",
-  "SIDEBAR_IMAGE_BG_HINT": "Otherwise the background will be transparent",
+  "SIDEBAR_IMAGE_BG": "Change background color",
+  "SIDEBAR_IMAGE_BG_HINT": "The background will be white",
+  "SIDEBAR_IMAGE_BG_PNG_HINT": "The background will be transparent",
   "SIDEBAR_IMAGE_WIDTH": "Width",
   "SIDEBAR_IMAGE_HEIGHT": "Height",
   "SIDEBAR_IMAGE_SCALE": "Scale image",
-  "SIDEBAR_IMAGE_SCALE_HINT": "You can increase the image by up to 10%",
+  "SIDEBAR_IMAGE_SCALE_HINT": "You can increase the image up to 10 times",
   "SIDEBAR_IMAGE_SELECT_TYPE": "Select filetype",
   "SIDEBAR_IMAGE_BTN_DOWNLOAD": "Download image",
   "SIDEBAR_IMAGE_GENERAL": "You can select either PNG or JPEG as type of your image. Furthermore can define several non-mandatory settings.",
