[DONE] label mappings creation and editing

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -175,6 +175,9 @@
   "MAIN_MAPPINGS_NEW_TT_HINTS_SHOW": "Hinweise anzeigen",
   "MAIN_MAPPINGS_NEW_TT_HINTS_HIDE": "Hinweise verstecken",
   "MAIN_MAPPINGS_NEW_TT_FONT_SIZE": "Schriftgröße zurücksetzen",
+  "MAIN_MAPPINGS_NEW_FONT_FAMILY_RESET": "Schriftfamilie zurücksetzen",
+  "MAIN_MAPPINGS_NEW_FONT_STYLE_RESET": "Schriftstil zurücksetzen",
+  "MAIN_MAPPINGS_NEW_FONT_SIZE": "Schriftgröße",
   "MAIN_MAPPINGS_NEW_DEFAULT_HINT_HEADING": "Kontinuierliche Mappings sind knifflig!",
   "MAIN_MAPPINGS_NEW_DEFAULT_HINT_1": "Lass dich von Standardwerten nicht verwirren. Die sind für das NDEx-Datenmodell nötig, beeinflussen dein Mapping aber nicht direkt.",
   "MAIN_MAPPINGS_NEW_DEFAULT_HINT_2": "Minimum und Maximum deines Attributs sollten in einem kontinuierlichen Mapping immer enthalten sein. Deshalb haben wir die schon ins Formular mit aufgenommen.",
