[FIX] recalculating exponential values to assure functionality, accepting that this may result in inaccuracies. Also wrapped the highlight form inside a responsive table to avoid layout bugs due to long attribute names

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -112,6 +112,7 @@
   "SIDEBAR_EDIT_INSPECT_RANGE_LOWER": "von",
   "SIDEBAR_EDIT_INSPECT_RANGE_UPPER": "bis",
   "SIDEBAR_EDIT_INSPECT_SAME_LABEL": "mit Wert",
+  "SIDEBAR_EDIT_INSPECT_SAME_PLACEHOLDER": "Wert",
   "SIDEBAR_EDIT_INSPECT_REMOVE_ITEM": "Element entfernen?",
   "MAIN_MAPPINGS_TH_COL": "Spalte mit Daten",
   "MAIN_MAPPINGS_TH_STYLE": "Zugewiesener Style",
