[DONE] included beautiful demo network with credits to source on NDEx and link to paper

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,8 @@
   "NAV_COMPARE_TT_INFO": "Please select a network",
   "NAV_EDIT_TT_INFO": "Please select a network",
   "MAIN_INFO_TITLE": "General info & First Steps",
+  "MAIN_INFO_DEMO_TITLE": "Demo network",
+  "MAIN_INFO_DEMO_DESCRIPTION": "In the list of available networks you will initially find one network we like to use as demo. You can check it out on NDEx by searching for its UUID <code>5d97a04a-6fab-11ea-bfdc-0ac135e8bacf</code>. The corresponding paper can be found <a href='https://www.biorxiv.org/content/10.1101/2020.03.22.002386v3' target='_blank'>here</a>.",
   "MAIN_INFO_DOCUMENTATION_TITLE": "Documentation",
   "MAIN_INFO_DOCUMENTATION_DESCRIPTION": "The documentation to this application is available as a separate .zip file delivered with the release. You can run the <code>index.html</code> to read up on the code.",
   "MAIN_INFO_STEPS_TITLE": "First steps",
@@ -186,7 +188,8 @@
   "SIDEBAR_COMPARE_TITLE": "Compare two networks",
   "SIDEBAR_COMPARE_ABOUT": "About NDExEdit",
   "SIDEBAR_COMPARE_ABOUT_1": "Do you like this app? There's a lot more to come!",
-  "SIDEBAR_COMPARE_ABOUT_2": "NDExEdit was developed as a bachelor thesis at University of Augsburg",
+  "SIDEBAR_COMPARE_ABOUT_2_1": "NDExEdit was developed by ",
+  "SIDEBAR_COMPARE_ABOUT_2_2": " as a bachelor thesis at University of Augsburg",
   "SIDEBAR_COMPARE_ABOUT_3_1": "Please contact",
   "SIDEBAR_COMPARE_ABOUT_3_2": "for feature requests and inquiries",
   "SIDEBAR_COMPARE_TEASER": "Comparison tool coming soon!",
