--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -5,6 +5,8 @@
   "NAV_COMPARE_TT_INFO": "Dazu muss ein Netzwerk ausgewählt werden",
   "NAV_EDIT_TT_INFO": "Dazu muss ein Netzwerk ausgewählt werden",
   "MAIN_INFO_TITLE": "Allgemeine Infos & Erste Schritte",
+  "MAIN_INFO_DEMO_TITLE": "Demo-Netzwerk",
+  "MAIN_INFO_DEMO_DESCRIPTION": "Initial befindet sich in der Liste der verfügbaren Netzwerke nur ein Netzwerk, das wir gerne als Demo verwenden. Auf NDEx kannst du es unter seiner UUID <code>5d97a04a-6fab-11ea-bfdc-0ac135e8bacf</code> finden. Das zugehörige Paper ist <a href='https://www.biorxiv.org/content/10.1101/2020.03.22.002386v3' target='_blank'>hier</a> verlinkt.",
   "MAIN_INFO_DOCUMENTATION_TITLE": "Dokumentation",
   "MAIN_INFO_DOCUMENTATION_DESCRIPTION": "Die Dokumentation zu dieser Anwendung ist als separate .zip-Datei im Release-Commit angehängt. Die dort enthaltene <code>index.html</code> kann direkt ausgeführt werden.",
   "MAIN_INFO_STEPS_TITLE": "Erste Schritte",
@@ -186,7 +188,8 @@
   "SIDEBAR_COMPARE_TITLE": "Zwei Netzwerke vergleichen",
   "SIDEBAR_COMPARE_ABOUT": "Über NDExEdit",
   "SIDEBAR_COMPARE_ABOUT_1": "Gefällt dir die Anwendung bislang? Warte mal, was noch alles auf dich zukommt!",
-  "SIDEBAR_COMPARE_ABOUT_2": "NDExEdit wurde im Rahmen einer Abschlussarbeit an der Universität Augsburg entwickelt",
+  "SIDEBAR_COMPARE_ABOUT_2_1": "NDExEdit wurde von ",
+  "SIDEBAR_COMPARE_ABOUT_2_2": " im Rahmen einer Abschlussarbeit an der Universität Augsburg entwickelt",
   "SIDEBAR_COMPARE_ABOUT_3_1": "Verbesserungsvorschläge und Nachfragen sind bei",
   "SIDEBAR_COMPARE_ABOUT_3_2": "gut aufgehoben",
   "SIDEBAR_COMPARE_TEASER": "Vergleich zweier Netzwerke kommt demnächst!",
