--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -82,6 +82,7 @@
   "SIDEBAR_EDIT_TH_HIGHLIGHT": "Elements",
   "SIDEBAR_EDIT_TT_SELECTOR": "Highlight elements with class",
   "SIDEBAR_EDIT_TT_ID": "Highlight element with ID",
+  "SIDEBAR_EDIT_TT_CONTINUOUS": "On click a preview for this continuous mapping appears below the network's description",
   "SIDEBAR_EDIT_LABEL_HEX_NODE": "Nodes highlighting (hex color codes as such #FF00FF)",
   "SIDEBAR_EDIT_LABEL_HEX_EDGE": "Edges highlighting (hex color codes as such #FF00FF)",
   "SIDEBAR_EDIT_LABEL_DURATION": "Duration (in ms)",
