--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -108,7 +108,7 @@
   "SIDEBAR_EDIT_TT_MANAGE_MAPPINGS": "Neue Mappings anlegen und existierende Mappings verwalten",
   "SIDEBAR_EDIT_MANAGE_MAPPINGS": "Mappings anlegen und verwalten",
   "SIDEBAR_EDIT_TT_PASSTHROUGH": "Ein Passthrough-Mapping schleust die Werte der Spalte (links) einfach durch bis zum spezifizierten Style-Attribut (rechts)",
-  "SIDEBAR_EDIT_INSPECT_TITLE_HINT": "Erstelle eigene Regeln, um das Netzwerk zu untersuchen. Definiere dazu Typ, Attribut und dessen Ausprägungen im Formular unten. Dann kannst du Elemente im Netzwerk entsprechend hervorheben.",
+  "SIDEBAR_EDIT_INSPECT_TITLE_HINT": "Erstelle eigene Regeln, um das Netzwerk zu untersuchen. Definiere dazu Typ, Attribut und dessen Ausprägungen im Formular unten. Dann kannst du Elemente im Netzwerk entsprechend hervorheben. Farben und Dauer der Markierung kannst du mit Klick auf das Zahnrad anpassen.",
   "SIDEBAR_EDIT_INSPECT_TYPE_NODE": "Knoten",
   "SIDEBAR_EDIT_INSPECT_TYPE_EDGE": "Kante",
   "SIDEBAR_EDIT_INSPECT_SAME": "hat den Wert",
