--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -108,7 +108,7 @@
   "SIDEBAR_EDIT_TT_MANAGE_MAPPINGS": "Manage existing mappings and create new ones",
   "SIDEBAR_EDIT_MANAGE_MAPPINGS": "Create and manage mappings",
   "SIDEBAR_EDIT_TT_PASSTHROUGH": "A passthrough mapping simply applies values from the data column (left) on the style property (right)",
-  "SIDEBAR_EDIT_INSPECT_TITLE_HINT": "Build inspections using the form below. Submit them to flash the matching elements during your session.",
+  "SIDEBAR_EDIT_INSPECT_TITLE_HINT": "Build inspections using the form below. Submit them to flash the matching elements during your session. Click the cogs above to change highlight colors and duration.",
   "SIDEBAR_EDIT_INSPECT_TYPE_NODE": "Node",
   "SIDEBAR_EDIT_INSPECT_TYPE_EDGE": "Edge",
   "SIDEBAR_EDIT_INSPECT_SAME": "same as",
