[WIP] last minor improvements for demo

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -6,7 +6,7 @@
   "NAV_EDIT_TT_INFO": "Dazu muss ein Netzwerk ausgewählt werden",
   "MAIN_INFO_TITLE": "Allgemeine Infos & Erste Schritte",
   "MAIN_INFO_DEMO_TITLE": "Demo-Netzwerk",
-  "MAIN_INFO_DEMO_DESCRIPTION": "Initial befindet sich in der Liste der verfügbaren Netzwerke nur ein Netzwerk, das wir gerne als Demo verwenden. Auf NDEx kannst du es unter seiner UUID <code>5d97a04a-6fab-11ea-bfdc-0ac135e8bacf</code> finden. Das zugehörige Paper ist <a href='https://www.biorxiv.org/content/10.1101/2020.03.22.002386v3' target='_blank'>hier</a> verlinkt.",
+  "MAIN_INFO_DEMO_DESCRIPTION": "Initial befindet sich in der Liste der verfügbaren Netzwerke nur ein Netzwerk, das wir als Demo verwenden. Auf NDEx kannst du es unter seiner UUID <code>5d97a04a-6fab-11ea-bfdc-0ac135e8bacf</code> finden. Das zugehörige Paper ist <a href='https://www.biorxiv.org/content/10.1101/2020.03.22.002386v3' target='_blank'>hier</a> verlinkt.",
   "MAIN_INFO_DOCUMENTATION_TITLE": "Dokumentation",
   "MAIN_INFO_DOCUMENTATION_DESCRIPTION": "Die Dokumentation zu dieser Anwendung ist als separate .zip-Datei im Release-Commit angehängt. Die dort enthaltene <code>index.html</code> kann direkt ausgeführt werden.",
   "MAIN_INFO_STEPS_TITLE": "Erste Schritte",
@@ -17,8 +17,9 @@
   "MAIN_INFO_STEPS_STEP_4": "Mit Klick auf \"Bearbeiten\" kannst du anpassen, wie der Graph aussieht",
   "MAIN_INFO_STEPS_STEP_5": "Den veränderten Graphen kannst du als .cx Datei runterladen",
   "MAIN_INFO_TT_FLIP": "Haupt- und Seitenansicht tauschen",
-  "MAIN_INFO_LAYOUT_TITLE": "Seitenverhältnis",
+  "MAIN_INFO_LAYOUT_LANG_TITLE": "Seitenverhältnis & Sprache",
   "MAIN_INFO_LAYOUT_DESCRIPTION": "Um das Seitenverhältnis der Anwendung zu manipulieren, sind in der grauen Leiste Buttons versteckt.",
+  "MAIN_INFO_LANG_DESCRIPTION": "Mit den Buttons DE und EN lässt sich die Sprache der Webseite auf jeweils Englisch bzw. Deutsch setzen.",
   "MAIN_INFO_LAYOUT_STEP_1": "Klick auf einen der Pfeile ändert das Seitenverhältnis",
   "MAIN_INFO_LAYOUT_STEP_2": "Klick auf Zurücksetzen stellt das Standard-Seitenverhältnis wieder her",
   "MAIN_INFO_LAYOUT_STEP_3": "Klick auf den gelben Button vertauscht die Haupt- und Seitenansicht",
@@ -45,6 +46,7 @@
   "MAIN_STATS_AXIS_OCCURANCES": "Anzahl Elemente des Attributs ",
   "MAIN_GRAPH_TITLE": "Graph",
   "MAIN_GRAPH_TT_FIT": "Graph an die Größe des Fensters anpassen",
+  "MAIN_GRAPH_TT_HOME": "Startseite",
   "MAIN_GRAPH_BTN_FIT": "Größe anpassen",
   "SIDEBAR_MANAGE_TITLE": "Verfügbare Netzwerke",
   "SIDEBAR_MANAGE_NW_NAME": "Netzwerkname",
@@ -53,9 +55,7 @@
   "SIDEBAR_MANAGE_TT_INFO": "Info über dieses Netzwerk",
   "SIDEBAR_MANAGE_TT_EDIT": "Dieses Netzwerk rendern und bearbeiten",
   "SIDEBAR_MANAGE_TT_DOWNLOAD": "Als .cx Datei herunterladen",
-  "SIDEBAR_MANAGE_HELP": "Brauchst du Hilfe?",
   "SIDEBAR_MANAGE_TT_IMAGE": "Optionen fürs Herunterladen als Bild",
-  "SIDEBAR_MANAGE_TT_HELP": "Tipps und erste Schritte",
   "SIDEBAR_MANAGE_LOCAL_FILE_LABEL": "Lokale Dateien",
   "SIDEBAR_MANAGE_LOCAL_FILE_BTN": "Hochladen",
   "SIDEBAR_MANAGE_REMOTE_FILE_LABEL": "Datei von NDEx laden",
@@ -122,7 +122,7 @@
   "MAIN_MAPPINGS_GRAPH": "Zurück zum Graph",
   "MAIN_MAPPINGS_TITLE_NODES_DISCRETE": "Diskrete Knotenmappings",
   "MAIN_MAPPINGS_TITLE_NODES_CONTINUOUS": "Kontinuierliche Knotenmappings",
-  "MAIN_MAPPINGS_TITLE_EDGES_DISCRETE": "Discrete Kantenmappings",
+  "MAIN_MAPPINGS_TITLE_EDGES_DISCRETE": "Diskrete Kantenmappings",
   "MAIN_MAPPINGS_TITLE_EDGES_CONTINUOUS": "Kontinuierliche Kantenmappings",
   "MAIN_MAPPINGS_TITLE_NODES_PASSTHROUGH": "Passthrough Knotenmappings",
   "MAIN_MAPPINGS_TITLE_EDGES_PASSTHROUGH": "Passthrough Kantenmappings",
@@ -190,7 +190,7 @@
   "SIDEBAR_COMPARE_ABOUT": "Über NDExEdit",
   "SIDEBAR_COMPARE_ABOUT_1": "Gefällt dir die Anwendung bislang? Warte mal, was noch alles auf dich zukommt!",
   "SIDEBAR_COMPARE_ABOUT_2_1": "NDExEdit wurde von ",
-  "SIDEBAR_COMPARE_ABOUT_2_2": " im Rahmen einer Abschlussarbeit an der Universität Augsburg entwickelt",
+  "SIDEBAR_COMPARE_ABOUT_2_2": " im Rahmen ihrer Abschlussarbeit an der Universität Augsburg entwickelt",
   "SIDEBAR_COMPARE_ABOUT_3_1": "Verbesserungsvorschläge und Nachfragen sind bei",
   "SIDEBAR_COMPARE_ABOUT_3_2": "gut aufgehoben",
   "SIDEBAR_COMPARE_TEASER": "Vergleich zweier Netzwerke kommt demnächst!",
