--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
   "NAV_EDIT_TT_INFO": "Please select a network",
   "MAIN_INFO_TITLE": "General info & First Steps",
   "MAIN_INFO_DEMO_TITLE": "Demo network",
-  "MAIN_INFO_DEMO_DESCRIPTION": "In the list of available networks you will initially find one network we like to use as demo. You can check it out on NDEx by searching for its UUID <code>5d97a04a-6fab-11ea-bfdc-0ac135e8bacf</code>. The corresponding paper can be found <a href='https://www.biorxiv.org/content/10.1101/2020.03.22.002386v3' target='_blank'>here</a>.",
+  "MAIN_INFO_DEMO_DESCRIPTION": "In the list of available networks you will initially find one network we use for demonstration purposes. You can check it out on NDEx by searching for its UUID <code><a href='https://www.ndexbio.org/viewer/networks/5d97a04a-6fab-11ea-bfdc-0ac135e8bacf' target='_blank'>5d97a04a-6fab-11ea-bfdc-0ac135e8bacf</a></code>. The corresponding paper can be found <a href='https://www.biorxiv.org/content/10.1101/2020.03.22.002386v3' target='_blank'>here</a>.",
   "MAIN_INFO_DOCUMENTATION_TITLE": "Documentation",
   "MAIN_INFO_DOCUMENTATION_DESCRIPTION": "The documentation to this application is available as a separate .zip file delivered with the release. You can run the <code>index.html</code> to read up on the code.",
   "MAIN_INFO_STEPS_TITLE": "First steps",
@@ -17,8 +17,9 @@
   "MAIN_INFO_STEPS_STEP_4": "Click on \"Edit\" to manipulate how the graph is displayed",
   "MAIN_INFO_STEPS_STEP_5": "You can download the adapted graph as .cx file",
   "MAIN_INFO_TT_FLIP": "Switch main and side view",
-  "MAIN_INFO_LAYOUT_TITLE": "Page layout",
+  "MAIN_INFO_LAYOUT_LANG_TITLE": "Page layout & language settings",
   "MAIN_INFO_LAYOUT_DESCRIPTION": "To modify the proportion of main view and sidebar there are some buttons hidden within the grey vertical bar:",
+  "MAIN_INFO_LANG_DESCRIPTION": "Use the buttons DE or EN to toggle German or English language.",
   "MAIN_INFO_LAYOUT_STEP_1": "Arrow buttons change the proportion",
   "MAIN_INFO_LAYOUT_STEP_2": "Reset button sets the proportion back to default",
   "MAIN_INFO_LAYOUT_STEP_3": "Yellow button switches main view and sidebar",
@@ -45,6 +46,7 @@
   "MAIN_STATS_AXIS_OCCURANCES": "# elements for attribute ",
   "MAIN_GRAPH_TITLE": "Graph",
   "MAIN_GRAPH_TT_FIT": "Fit graph to current page layout",
+  "MAIN_GRAPH_TT_HOME": "Main page",
   "MAIN_GRAPH_BTN_FIT": "Fit graph",
   "SIDEBAR_MANAGE_TITLE": "Available networks",
   "SIDEBAR_MANAGE_NW_NAME": "Network name",
@@ -54,8 +56,6 @@
   "SIDEBAR_MANAGE_TT_EDIT": "Render and edit this network",
   "SIDEBAR_MANAGE_TT_DOWNLOAD": "Download as .cx file",
   "SIDEBAR_MANAGE_TT_IMAGE": "Specify options to download as image",
-  "SIDEBAR_MANAGE_HELP": "Are you lost?",
-  "SIDEBAR_MANAGE_TT_HELP": "Tips and first steps",
   "SIDEBAR_MANAGE_LOCAL_FILE_LABEL": "Browse local files",
   "SIDEBAR_MANAGE_LOCAL_FILE_BTN": "Upload",
   "SIDEBAR_MANAGE_REMOTE_FILE_LABEL": "Load file from NDEx",
@@ -189,8 +189,8 @@
   "SIDEBAR_COMPARE_TITLE": "Compare two networks",
   "SIDEBAR_COMPARE_ABOUT": "About NDExEdit",
   "SIDEBAR_COMPARE_ABOUT_1": "Do you like this app? There's a lot more to come!",
-  "SIDEBAR_COMPARE_ABOUT_2_1": "NDExEdit was developed by ",
-  "SIDEBAR_COMPARE_ABOUT_2_2": " as a bachelor thesis at University of Augsburg",
+  "SIDEBAR_COMPARE_ABOUT_2_1": "NDExEdit was developed as part of her bachelor thesis by ",
+  "SIDEBAR_COMPARE_ABOUT_2_2": " at the University of Augsburg",
   "SIDEBAR_COMPARE_ABOUT_3_1": "Please contact",
   "SIDEBAR_COMPARE_ABOUT_3_2": "for feature requests and inquiries",
   "SIDEBAR_COMPARE_TEASER": "Comparison tool coming soon!",
