[DONE] improved tooltip directions and fixed some cut off tooltips

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -23,6 +23,8 @@
   "MAIN_INFO_LAYOUT_STEP_1": "Klick auf einen der Pfeile ändert das Seitenverhältnis",
   "MAIN_INFO_LAYOUT_STEP_2": "Klick auf Zurücksetzen stellt das Standard-Seitenverhältnis wieder her",
   "MAIN_INFO_LAYOUT_STEP_3": "Klick auf den gelben Button vertauscht die Haupt- und Seitenansicht",
+  "MAIN_INFO_TT_MAIL_MAYER": "Mail an Simone Mayer",
+  "MAIN_INFO_TT_MAIL_AUER": "Mail an Florian Auer",
   "MAIN_STATS_TITLE": "Daten",
   "MAIN_STATS_NO_DESCRIPTION": "Keine Beschreibung verfügbar",
   "MAIN_STATS_GRAPH_INFO_TITLE": "Über Graph",
@@ -72,6 +74,7 @@
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT": "Ein Netzwerk mit so vielen Elementen kann nicht verarbeitet werden",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES": "#Knoten",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES": "#Kanten",
+  "SIDEBAR_COLLAPSE": "Aus- / einblenden",
   "SIDEBAR_EDIT_DESCRIPTION_TITLE": "Beschreibung",
   "SIDEBAR_EDIT_DEFAULT_TITLE": "Bearbeiten",
   "SIDEBAR_EDIT_INSPECT_TITLE": "Netzwerk untersuchen",
@@ -117,6 +120,9 @@
   "SIDEBAR_EDIT_INSPECT_SAME_LABEL": "mit Wert",
   "SIDEBAR_EDIT_INSPECT_SAME_PLACEHOLDER": "Wert",
   "SIDEBAR_EDIT_INSPECT_REMOVE_ITEM": "Element entfernen?",
+  "SIDEBAR_EDIT_NAV_TT_MAPPINGS": "Übersicht über Mappings",
+  "SIDEBAR_EDIT_NAV_TT_INSPECT": "Netzwerk untersuchen",
+  "SIDEBAR_EDIT_NAV_TT_SETTINGS": "Markierungseinstellungen",
   "MAIN_MAPPINGS_TH_COL": "Spalte mit Daten",
   "MAIN_MAPPINGS_TH_STYLE": "Zugewiesener Style",
   "MAIN_MAPPINGS_GRAPH": "Zurück zum Graph",
