handling boolean values as valid type for discrete, reworked selected elements and collapsing elements

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,6 +23,8 @@
   "MAIN_INFO_LAYOUT_STEP_1": "Arrow buttons change the proportion",
   "MAIN_INFO_LAYOUT_STEP_2": "Reset button sets the proportion back to default",
   "MAIN_INFO_LAYOUT_STEP_3": "Yellow button switches main view and sidebar",
+  "MAIN_INFO_TT_MAIL_MAYER": "Send a mail to Simone Mayer",
+  "MAIN_INFO_TT_MAIL_AUER": "Send a mail to Florian Auer",
   "MAIN_STATS_TITLE": "Statistics",
   "MAIN_STATS_NO_DESCRIPTION": "No description found",
   "MAIN_STATS_GRAPH_INFO_TITLE": "Info about",
@@ -72,6 +74,7 @@
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT": "The network contains too many elements for this application",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_NODES": "#Nodes",
   "SIDEBAR_MANAGE_FILE_ELEMENT_COUNT_LABEL_EDGES": "#Edges",
+  "SIDEBAR_COLLAPSE": "Hide / show",
   "SIDEBAR_EDIT_DESCRIPTION_TITLE": "Description",
   "SIDEBAR_EDIT_DEFAULT_TITLE": "Edit",
   "SIDEBAR_EDIT_INSPECT_TITLE": "Inspect network",
@@ -97,10 +100,10 @@
   "SIDEBAR_EDIT_ASPECTS_NODES": "Nodes",
   "SIDEBAR_EDIT_ASPECTS_EDGES": "Edges",
   "SIDEBAR_EDIT_MAPPED_BY": "mapped by",
-  "SIDEBAR_EDIT_COMPARISON_NODES": "Nodes",
+  "SIDEBAR_EDIT_COMPARISON_NODE": "Nodes",
   "SIDEBAR_EDIT_COMPARISON_NODE_NAME": "Node name (ID)",
   "SIDEBAR_EDIT_COMPARISON_NODE_ATTRIBUTES": "Node attributes",
-  "SIDEBAR_EDIT_COMPARISON_EDGES": "Edges",
+  "SIDEBAR_EDIT_COMPARISON_EDGE": "Edges",
   "SIDEBAR_EDIT_COMPARISON_EDGE_NAME": "Edge name (ID)",
   "SIDEBAR_EDIT_COMPARISON_EDGE_ATTRIBUTES": "Edge attributes",
   "SIDEBAR_EDIT_TT_HIGHLIGHT_NODE": "Highlight node",
@@ -117,6 +120,10 @@
   "SIDEBAR_EDIT_INSPECT_SAME_LABEL": "same as",
   "SIDEBAR_EDIT_INSPECT_SAME_PLACEHOLDER": "value",
   "SIDEBAR_EDIT_INSPECT_REMOVE_ITEM": "Remove element?",
+  "SIDEBAR_EDIT_NAV_TT_MAPPINGS": "Mappings overview",
+  "SIDEBAR_EDIT_NAV_TT_INSPECT": "Inspect network data",
+  "SIDEBAR_EDIT_NAV_TT_SETTINGS": "Highlighting settings",
+  "SIDEBAR_EDIT_BTN_LABEL_DISPLAY_CONTINUOUS_DETAILS": "Visit details",
   "MAIN_MAPPINGS_TH_COL": "Data column",
   "MAIN_MAPPINGS_TH_STYLE": "Applied style",
   "MAIN_MAPPINGS_GRAPH": "Return to graph",
